--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <a href="FeiJi/index.html">
         <div class="col-md-4 game-card" style="background: url('images/FeiJi.jpg')no-repeat 100%;background-size: cover"></div>
     </a>
+    <a href="xiaoxiaole/index.html">
+        <div class="col-md-4 game-card" style="background: url('images/xiaoxiaole.jpg')no-repeat 100%;background-size: cover"></div>
+    </a>
 </div>
 </body>
 </html>
